offlineimap (3.0.0) unstable; urgency=low

  * Introduced a new graphical user interface written with Tkinter.
  * Made IMAP folder addmessagesflags() resiliant to a server refusing
    to return a full set of new message flags.  Closes: #152587.

 -- John Goerzen <jgoerzen@complete.org>  Thu, 11 Jul 2002 08:35:42 -0500

offlineimap (2.0.8) unstable; urgency=low

  * Modified the IMAP folder to use SELECT rather than STATUS more often.
    Makes the code more robust; handles better with read-only folders;
    and runs faster, especially for non-threaded useres, where it
    may eliminate up to 2-3 commands per folder.
  * Made sure IMAP folder savemessage() does a select.  This was a possible
    bug.
  * Modified Maildir folder to unlink messages with T flag in
    cachemessagelist()
  * My own box now syncs in 3 seconds.
  * Optimized acquireconnection() to try to give a thread back the
    connection that it last used, if possible.

 -- John Goerzen <jgoerzen@complete.org>  Tue, 9 Jul 2002 23:29:30 -0500

offlineimap (2.0.7) unstable; urgency=low

  * Fixed imaplib.py to work better with read-only folders.

 -- John Goerzen <jgoerzen@complete.org>  Tue,  9 Jul 2002 20:24:21 -0500

offlineimap (2.0.6) unstable; urgency=low

  * Added support for holdconnectionopen and keepalive.  This feature
    allows for an IMAP server connection(s) to be held open until
    the next sync process, permitting faster restart times.
  * Another try at read-only folder support.  This is nasty because I
    have no way to test it and imaplib's read-only support is weird.
  * Closing out old bug; fixed in 1.0.2.  Closes: #150803.
  * Optimized algorithm so that a SELECT is never issued for folders
    that contain no messages.

 -- John Goerzen <jgoerzen@complete.org>  Tue,  9 Jul 2002 20:05:24 -0500

offlineimap (2.0.5) unstable; urgency=low

  * Fixed a folderfilter example.  Partially fixes #152079.
  * Added folderincludes capability.  Partially fixes #152079.