@@ -1,2 +1,5 @@
-README
-offlineimap.conf
+manual.txt
+manual.ps
+manual.pdf
+manual.html
+
